# telegrambotdjango

./: .env_prod  Django.run.xml  pyproject.toml  requirements.txt
core/: settings.py
core/apps/bot/: apps.py  main_bot.py  tron.py
core/apps/management/: apps.py
core/apps/management/management/commands/: run_bot.py
core/core/: settings.py
